@@ -120,6 +120,15 @@
   // user is forced to make a selection.
   $config_list_obligatory_null_item = false;
 
+
+  // Wether or not to use the keyboardhandler for attributes and the recordlist
+  // When set to true, arrow keys can be used to navigate through fields and
+  // records, as well as shortcuts 'e' for edit, 'd' for delete, and left/right
+  // cursor for paging. Note however, that using cursor keys to navigate
+  // through fields is not standard web application behaviour.
+  $config_use_keyboard_handler = false;
+
+
   //----------------- SECURITY CONFIGURATION --------------------
 
   // The type of authentication (user/password verification) to use.
